# KikoFlu

./: .gitignore  README.md  README_EN.md  README_JA.md  altstore-source.json  build_ios_xcode.sh  capture_kikoflu.ps1  fix_conflicts.py  flutter_log.txt  installer_script.iss  log_output.txt  pubspec.yaml  untranslated_messages.txt
.github/workflows/: build.yml
.kilo/plans/: fix-usb-dac-crackling-flac16.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  aaudio_player.cpp  aaudio_player.h  jni_bridge.cpp  mp3_encoder_jni.cpp  usb_dac_driver.cpp  usb_dac_driver.h
android/app/src/main/cpp/lame/libmp3lame/: machine.h
decent-player/: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md
decent-player/.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  dac-verification.md
decent-player/docs/: README.md  debug-latest.txt
decent-player/docs/driver/: 01-executive-summary.md  02-investigation-journey.md  03-technical-architecture.md  04-five-critical-bugs.md  05-cayin-ru7-hardware-reference.md  06-usb-protocol-analysis.md  07-verification-and-diagnostics.md  08-usb-descriptor-parsing.md  09-future-work.md  10-samsung-s26-ultra-specifics.md  11-standalone-library-architecture.md  12-usb-audio-pops-resolution.md  13-usb-audio-diagnostics-reference.md
decent-player/docs/hardware/: cayin-ru7-clock-source.md  cayin-ru7-usb-analysis.md  usb-dac-behavior-analysis.md
decent-player/docs/issues/: 01-exoplayer-pipeline-latency-high-samplerates.md
decent-player/docs/libs/: ARCHITECTURE.md  DECODER_FLAC_BUILD.md  DSD_SUPPORT.md  FLAC_DECODERS.md  GETTING_STARTED.md  INTEGRATION_GUIDE.md  KNOWN_LIMITATIONS.md
decent-player/driver/Felicity/: .gitignore  LICENSE  README.md  build.gradle  common.gradle  gradle.properties  release  settings.gradle
decent-player/driver/Felicity/engine/src/main/jni/: CMakeLists.txt  aaudio-player.cpp  aaudio-player.h  dsp-engine.cpp  dsp-engine.h  fft-context.h  visualizer-fft.cpp
decent-player/driver/Felicity/milkdrop/src/main/jni/: CMakeLists.txt  milkdrop-bridge.cpp
decent-player/libs/: settings.gradle.kts
decent-player/libs/decent-media3-decoder-flac/: build.gradle.kts
decent-player/libs/decent-usb-audio-driver/: build.gradle.kts
decent-player/libs/decent-usb-audio-driver/src/main/jni/: CMakeLists.txt  native-audio-engine.cpp
decent-player/libs/decent-usb-audio-wrapper-media3/: build.gradle.kts
decent-player/player/: README.md
docs/: aaudio_exclusive_mode_architecture.md
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist
lib/: main.dart
lib/l10n/: app_en.arb  app_ja.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_ja.dart  app_localizations_ru.dart  app_localizations_zh.dart  app_ru.arb  app_zh.arb  app_zh_Hant.arb  localizations_ext.dart
lib/src/app/: app_bootstrap.dart
lib/src/models/: account.dart  audio_bookmark.dart  audio_info_model.dart  audio_track.dart  audio_track.g.dart  download_task.dart  history_record.dart  lyric.dart  playlist.dart  playlist.g.dart  search_type.dart  smart_playlist.dart  sort_options.dart  user.dart  work.dart  work.g.dart
lib/src/providers/: ai_download_provider.dart  ai_settings_provider.dart  audio_provider.dart  auth_provider.dart  batch_transcription_provider.dart  equalizer_provider.dart  exclusive_audio_provider.dart  floating_lyric_provider.dart  floating_lyric_style_provider.dart  history_provider.dart  listening_stats_provider.dart  locale_provider.dart  lyric_provider.dart  my_reviews_provider.dart  my_tabs_display_provider.dart  player_buttons_provider.dart  player_lyric_style_provider.dart  playlist_detail_provider.dart  playlists_provider.dart  recommendation_provider.dart  search_history_provider.dart  search_result_provider.dart  series_works_provider.dart  settings_provider.dart  smart_playlist_evaluator_provider.dart  smart_playlists_provider.dart  subtitle_library_provider.dart  theme_provider.dart  update_provider.dart  usb_dac_provider.dart  work_card_display_provider.dart  work_detail_display_provider.dart  works_provider.dart
lib/src/screens/: about_screen.dart  account_management_screen.dart  audio_format_settings_screen.dart  audio_player_screen.dart  blocked_items_screen.dart  download_path_settings_screen.dart  downloads_screen.dart  equalizer_screen.dart  floating_lyric_style_screen.dart  history_screen.dart  listening_statistics_screen.dart  llm_settings_screen.dart  local_downloads_screen.dart  local_file_browser_screen.dart  lock_screen.dart  lock_screen_setup_sheet.dart  log_screen.dart  login_screen.dart  main_screen.dart  my_screen.dart  my_tabs_display_settings_screen.dart  offline_work_detail_screen.dart  permissions_screen.dart  player_buttons_settings_screen.dart  player_lyric_style_screen.dart  playlist_detail_screen.dart  playlists_screen.dart  preferences_screen.dart  privacy_mode_settings_screen.dart  search_result_screen.dart  search_screen.dart  (+12 more)
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist
scripts/: add_crossfade_locale.py  add_hires_locale.py  add_sample_rate_locale.py  add_theme_getters.py  add_usb_info_getter.py  add_usb_info_locale.py  add_usb_tooltip_locale.py  download_lame.ps1  fix_usb_info_locale.py  fix_zh_crossfade.py  fix_zh_final.py  fix_zh_getters.py  fix_zh_getters2.py  fix_zh_hires.py  insert_locale_keys.py  insert_usb_dac_locale_keys.ps1  setup_libusb.bat  setup_libusb.sh
test/: download_service_test.dart  encoding_utils_test.dart  folder_pattern_test.dart  hi_res_audio_service_test.dart  kikoeru_api_service_test.dart  lyric_parser_test.dart  playback_history_service_test.dart  translation_test.dart  version_comparison_test.dart  zip_folder_logic_test.dart
test_scroll/: pubspec.yaml
test_scroll/test/: test_scroll_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc
(+1090 files in other folders)
